Log 15: <frontend> password validation

--- a/log-reg_front-end/src/css/styles.css
+++ b/log-reg_front-end/src/css/styles.css
@@ -239,3 +239,10 @@ body {
   max-width: 100%; /* Zapewnia, że obrazek nie będzie przekraczał rozmiarów jego pojemnika */
   max-height: 100%;
 }
+
+.regist__message {
+  display: flex; 
+  justify-content: center;
+  align-items: center; 
+}
+
