Log 74: <frontend> list of tables updated

--- a/log-reg_front-end/src/components/AfterLogin/CRUD-question/ShowTables/ShowTables.css
+++ b/log-reg_front-end/src/components/AfterLogin/CRUD-question/ShowTables/ShowTables.css
@@ -2,12 +2,7 @@ body {
     background-color: #111111;
   }
 
-/* ShowTables.css */
-.crud-description {
-  color: white;
-}
-
-.table-name {
+.show_tables__p, .show_tables__table-name, .table-name {
   color: white;
 }
 
