--- a/log-reg_front-end/src/components/AfterLogin/CRUD-question/ShowTables/ShowTables.css
+++ b/log-reg_front-end/src/components/AfterLogin/CRUD-question/ShowTables/ShowTables.css
@@ -48,3 +48,24 @@ ul {
 .btn-show:hover {
     background-color: #0056b3;
 }
+
+.updating-box {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 600px;
+    height: 400px;
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    color: black;
+    z-index: 9999; /* Zwi?ksz z-index, aby by? na wierzchu innych elementów */
+}
+
+.updating-box p {
+    margin: 0;
+}
+
