--- a/log-reg_front-end/src/components/AfterLogin/UserPanel.css
+++ b/log-reg_front-end/src/components/AfterLogin/UserPanel.css
@@ -36,3 +36,48 @@
 .center-side p {
   font-size: 24px; 
 }
+
+/* NavBar */
+
+*{
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+}
+
+body {
+  font-family:Arial, Helvetica, sans-serif
+}
+
+nav{
+  background-color: blue;
+  height: 80px;
+  width: 100%;
+}
+
+nav ul {
+  float: right;
+  margin-right: 20px;
+}
+
+nav ul li {
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+}
+
+nav ul li a {
+  color: #f0f0f0;
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 3px;
+  text-transform: uppercase;
+}
+
+a.active, a:hover{
+  background: #1b9bff;
+  transition: .5s;
+
+}
