--- a/log-reg_front-end/src/components/AfterLogin/MainMenu/NavBar/NavBar.css
+++ b/log-reg_front-end/src/components/AfterLogin/MainMenu/NavBar/NavBar.css
@@ -1,67 +1,106 @@
 *{
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    list-style: none;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+}
+
+body {
+  font-family:Arial, Helvetica, sans-serif
+}
+
+nav{
+  background-color: blue;
+  height: 80px;
+  width: 100%;
+}
+
+label.logo{
+  color: white;
+  font-size: 35px;
+  line-height: 80px;
+  padding: 0 100px;
+  font-weight: bold;
+}
+
+nav ul {
+  float: right;
+  margin-right: 20px;
+}
+
+nav ul li {
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+}
+
+nav ul li a {
+  color: #f0f0f0;
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 3px;
+  text-transform: uppercase;
+}
+
+a.active, a:hover{
+  background: #1b9bff;
+  transition: .5s;
+}
+
+.checkbtn{
+  font-size: 30px;
+  color: white;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+
+#check{
+  display: none;
+}
+
+@media (max-width: 952px){
+  label.logo{
+      font-size: 30px;
+      padding-left: 50px;
   }
-  
-  body {
-    font-family:Arial, Helvetica, sans-serif
-  }
-  
-  nav{
-    background-color: blue;
-    height: 80px;
-    width: 100%;
-  }
-  
-  nav ul {
-    float: right;
-    margin-right: 20px;
-  }
-  
-  nav ul li {
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
-  }
-  
-  nav ul li a {
-    color: #f0f0f0;
-    font-size: 17px;
-    padding: 7px 13px;
-    border-radius: 3px;
-    text-transform: uppercase;
-  }
-  
-  a.active, a:hover{
-    background: #1b9bff;
-    transition: .5s;
-  }
-  
-  @media (max-width: 800px){
-    nav ul li a{
+  nav ul li a{
       font-size: 16px;
     }
-    ul{
-      position: fixed;
-      width: 100%;
-      height: 100vh;
-      background: #2c3e50;
-      top: 80px;
-      left: 0;
-      text-align: center;
-      transition: all .5s;
-    }
-    nav ul li{
+}
+  
+
+
+@media (max-width: 800px){
+  .checkbtn{
       display: block;
-    }
-    nav ul li a{
-      font-size: 20px;
-    }
-    a.active, a:hover{
-      background: none;
-      color: #0082e6;
-    }
   }
+  ul{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #2c3e50;
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    transition: all .5s;
+  }
+  nav ul li{
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+  nav ul li a{
+    font-size: 20px;
+  }
+  a.active, a:hover{
+    background: none;
+    color: #0082e6;
+  }
+  #check:checked ~ ul{
+      left: 0;
+  }
+}
