Log 102:<frontend> CSS styles  upgraded

--- a/log-reg_front-end/src/components/AfterLogin/CRUD-question/InsertInTable/ImportExport/ImportExport.css
+++ b/log-reg_front-end/src/components/AfterLogin/CRUD-question/InsertInTable/ImportExport/ImportExport.css
@@ -23,23 +23,20 @@
     border-radius: 4px;
   }
 
-  /* LabelInput.css */
-
 .label {
   color: azure;
   margin-bottom: 10px;
 }
 
 .label__input {
-  width: 100%; /* Ustaw szerokość na 100% kontenera */
+  width: 100%;
   height: 30px;
-  padding: 5px; /* Dodaj odstęp wokół pola */
-  border: 1px solid #ccc; /* Dodaj obramowanie */
-  border-radius: 5px; /* Zaokrąglij narożniki */
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 
-/* Dodaj styl dla pola tekstowego, gdy jest w stanie focus */
 .label__input:focus {
   outline: none;
-  border-color: dodgerblue; /* Zmień kolor obramowania w stanie focus */
+  border-color: red;
 }
