--- a/log-reg_front-end/src/components/AfterLogin/MainMenu/NavBar/NavBar.css
+++ b/log-reg_front-end/src/components/AfterLogin/MainMenu/NavBar/NavBar.css
@@ -43,10 +43,6 @@ nav ul li a {
   text-transform: uppercase;
 }
 
-a.active, a:hover{
-  background: #1b9bff;
-  transition: .5s;
-}
 
 .checkbtn{
   font-size: 30px;
@@ -78,7 +74,7 @@ a.active, a:hover{
   .checkbtn{
       display: block;
   }
-  ul{
+  .navbar__ul{
     position: fixed;
     width: 100%;
     height: 100vh;
@@ -88,19 +84,19 @@ a.active, a:hover{
     text-align: center;
     transition: all .5s;
   }
-  nav ul li{
+  nav .navbar__ul li{
     display: block;
     margin: 50px 0;
     line-height: 30px;
   }
-  nav ul li a{
+  nav .navbar__ul li a{
     font-size: 20px;
   }
   a.active, a:hover{
     background: none;
     color: #0082e6;
   }
-  #check:checked ~ ul{
+  #check:checked ~ .navbar__ul{
       left: 0;
   }
 }
