Log 110:<frontend> EditForm.css has been fixed

--- a/log-reg_front-end/src/components/AfterLogin/CRUD-question/InsertInTable/ImportExport/ImportExport.css
+++ b/log-reg_front-end/src/components/AfterLogin/CRUD-question/InsertInTable/ImportExport/ImportExport.css
@@ -16,8 +16,8 @@
     align-items: flex-start;
     background-color: grey;
     color: aliceblue;
-    width: 60%;
-    height: 40%;
+    width: 80%;
+    height: auto;
     padding: 3%;
     border: 1px solid #ccc;
     border-radius: 4px;
