--- a/log-reg_front-end/src/components/AfterLogin/Quiz/Quiz.css
+++ b/log-reg_front-end/src/components/AfterLogin/Quiz/Quiz.css
@@ -1,13 +1,5 @@
 body {
-  background-color: #111111;
-}
-
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 80vh;
-  background: #111111;
+  background-color: black;
 }
 
 .quiz-question-container {
@@ -48,30 +40,6 @@ body {
   margin-right: 5px;
 }
 
-.next-button,
-.previous-button {
-  font-size: 16px;
-  padding: 10px 20px;
-  margin-top: 20px;
-  background-color: #e50914;
-  color: #ffffff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.next-button:hover,
-.previous-button:hover {
-  background-color: #ff0000;
-  transform: scale(1.05);
-}
-
-.answers {
-  margin-top: 20px;
-  text-align: center;
-  background-color: #141414;
-}
 
 .correct-answer {
   color: #2ecc71;
@@ -109,89 +77,5 @@ body {
   }
   40%, 80% {
     transform: translateX(5px);
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .container {
-    width: 100%;
-    padding: 0;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-  }
-
-  .quiz-question-container {
-    max-width: 100%;
-    padding: 10px;
-    text-align: center;
-    flex: 60%;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: #141414;
-  }
-
-  .option-label {
-    font-size: 16px;
-    margin-bottom: 4px;
-    flex: 1;
-    width: 80%;
-    text-align: left;
-    padding-left: 10px;
-    display: inline-block;
-  }
-
-  .answers {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: #141414;
-    padding: 10px;
-    text-align: center;
-    z-index: 999;
-    flex: 40%;
-  }
-
-  .btn {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 2px;
-  }
-
-  .next-button,
-  .previous-button {
-    font-size: 16px;
-    padding: 10px 20px;
-    background-color: #e50914;
-    color: #ffffff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-
-  .next-button:hover,
-  .previous-button:hover {
-    background-color: #ff0000;
-  }
-
-  .correct-answer,
-  .incorrect-answer {
-    font-size: 16px;
-    margin-top: 5px;
-  }
-
-  .incorrect-answer_p {
-    color: #ffffff;
-  }
-
-  .quiz-question {
-    font-size: 16px;
-    margin-bottom: 10px;
-  }
-
-  .quiz-option {
-    min-width: 100px;
   }
 }
