Log 117:<frontend> issue with CSS style has been fixed

--- a/log-reg_front-end/src/components/AfterLogin/MainMenu/NavBar/NavBar.css
+++ b/log-reg_front-end/src/components/AfterLogin/MainMenu/NavBar/NavBar.css
@@ -9,4 +9,17 @@
       display: block;
       transition: all 0.3s; 
     }
+    .collapse.navbar-collapse {
+  position: absolute;
+  margin: 5px;
+  width: 98%;
+  top: 100%;
+  left: 1px;
+  background-color: rgba(var(--bs-dark-rgb),var(--bs-bg-opacity)); /* color of bootstrap bg-dark */
+  border-radius: 1%;
+  z-index: 999; 
+}
+  .button {
+    width: 150px;
+  }
   }
